--- a/frontend/src/components/button.component.css
+++ b/frontend/src/components/button.component.css
@@ -2,6 +2,7 @@
   display: inline-block;
   font-size: 1rem;
   line-height: 1.5;
+  margin: 0;
   padding: 0.5rem 1rem;
   border: solid 0.1rem #000;
   text-decoration: none;
