--- a/frontend/src/components/button.component.css
+++ b/frontend/src/components/button.component.css
@@ -15,7 +15,7 @@
   margin-left: 0.5rem;
 }
 
-.button:hover {
+.button:not(:disabled):hover {
   transform: translate(-0.25rem, -0.25rem);
   box-shadow: 0.25rem 0.25rem #000;
 }
@@ -25,7 +25,7 @@
   background-color: #000;
 }
 
-.button--primary:hover {
+.button--primary:not(:disabled):hover {
   background-color: #36a9ae;
 }
 
