--- a/frontend/src/components/container.component.css
+++ b/frontend/src/components/container.component.css
@@ -1,7 +1,7 @@
 .container {
-  width: 100%;
+  width: 95vw;
   max-width: 900px;
-  min-height: 95vh;
+  min-height: 100vh;
   margin: 0 auto;
   border-left: 0.1rem solid #000;
   border-right: 0.1rem solid #000;
